fix: mobile overflow issue

--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -13,3 +13,11 @@
 		background-color: var(--catppuccin-color-crust) !important;
 	}
 }
+
+:root,
+html,
+body {
+	width: 100dvw;
+	height: 100dvh;
+	overflow: hidden;
+}
